K3S/monitoring/KubeStateMetrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: monitoring
  labels:
    app: kube-state-metrics
spec:
  ports:
    - name: metrics
      port: 8080
      targetPort: metrics
  selector:
    app: kube-state-metrics
